go-carbon-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-carbon
  namespace: carbon-cluster
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-carbon
  template:
    metadata:
      labels:
        app: go-carbon
    spec:
      containers:
      - name: go-carbon
        image: go-carbon/go-carbon:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /etc/go-carbon/go-carbon.conf
          subPath: go-carbon.conf
        - name: config-volume
          mountPath: /etc/go-carbon/storage-schema.conf
          subPath: storage-schema.conf
        - name: config-volume
          mountPath: /etc/go-carbon/storage-aggregation.conf
          subPath: storage-aggregation.conf
        - name: storage-volume
          mountPath: /var/lib/go-carbon
      volumes:
      - name: config-volume
        configMap:
          name: go-carbon-config
      - name: storage-volume
        persistentVolumeClaim:
          claimName: go-carbon-pvc
