carbonapi-service.yml
apiVersion: v1
kind: Service
metadata:
  name: carbonapi
  namespace: carbon-cluster
spec:
  selector:
    app: carbonapi
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
  type: LoadBalancer
