go-carbon-service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-carbon
  namespace: carbon-cluster
spec:
  selector:
    app: go-carbon
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: LoadBalancer
