grafana-service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: carbon-cluster
spec:
  selector:
    app: grafana
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: LoadBalancer
