ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: carbon-cluster-ingress
  namespace: carbon-cluster
spec:
  rules:
  - host: carbonapi.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: carbonapi
            port:
              number: 8081
  - host: grafana.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
